--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "prefix": "/",
-    "token": "MTA3NjY3OTc3MjU2MzgzNjk1OA.G1wT-W.nnMGfsSze0EHvx2-y8wpVwo460vC29ZsYB0zvw",
+    "token": "you youtube token",
     "clientId": "1076679772563836958",
 	"guildId": "745307199466766338",
     "guildIdprism": "508818085692833802",
-    "key": "AIzaSyBMl7maLPZqquCrwRCxbgAk99qXURsZ7K0"
+    "key": "you bot token"
     }
